Fix cut off text in Global Search in Firefox
Summary: Fixes T7914. Firefox is a special browser with special needs.

Test Plan: On Mac, test Safari, Chrome, Firefox. On Windows, IE and Firefox.

Reviewers: btrahan, epriestley

Reviewed By: epriestley

Subscribers: Korvin, epriestley

Maniphest Tasks: T7914

Differential Revision: https://secure.phabricator.com/D12611

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -158,9 +158,8 @@
   background-color: rgba(0,0,0,.5);
   opacity: .8;
   height: 28px;
-  line-height: 12px;
   box-shadow: 0px 1px 1px rgba(128, 128, 128, 0.25);
-  padding: 6px 30px 6px 6px;
+  padding: 3px 30px 3px 6px;
   float: left;
   width: 205px;
 }
